--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 # Definitely needed for Flask-powered Web Apps
-gunicor
-Jinja2
-Werkzeug
+gunicorn==20.0.4
+Jinja2==2.11.2
+Werkzeug==1.0.1
 
 # Needed for this specific app
-Flask
-pandas
-pymysql
-SQLAlchemy
+Flask==1.1.2
+pandas==1.1.5
+pymysql==0.10.1
+SQLAlchemy==1.3.22
 json
